Fixed order confirmation prices and delete button of items

--- a/resources/scss/ceres/views/Templates/BasketItemList/_basket-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketItemList/_basket-item.scss
@@ -262,3 +262,43 @@
 .no-pointer-events {
 	pointer-events: none;
 }
+
+/* Compatibility for IE */
+html.ie .confirmation-order-list .cmp-order-item {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	flex-basis: 84px;
+
+	.item-image {
+		width: 84px;
+		height: auto;
+	}
+	.item-name {
+		max-height: none;
+	}
+	.item-details {
+		margin-top: 0;
+		display: block;
+		flex-grow: 2;
+
+		.row {
+			strong:first-of-type {
+				min-width: 90px;
+				width: auto;
+			}
+			span,
+			strong:nth-of-type(2) {
+				width: auto;
+			}
+		}
+	}
+	@include media-breakpoint-down(sm) {
+		.item-details {
+			-ms-flex-order: 2;
+			order: 2;
+			-ms-flex: 1;
+			flex: 1;
+		}
+	}
+}
