--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -61,12 +61,12 @@
 
         <div class="live-shopping-prices bg-danger" v-if="hasStarted && !hasClosed">
             <div class="live-shopping-prices-inner">
-                <div class="live-shopping-prices-rebate">{{ trans("Ceres::Template.liveShoppingRebate", {"rebate": "${ itemPriceRebatePercentage }" }) }}</div>
+                <div class="live-shopping-prices-rebate" v-if="isNaN(itemPriceRebatePercentage)">{{ trans("Ceres::Template.liveShoppingRebate", {"rebate": "${ itemPriceRebatePercentage }" }) }}</div>
                 <div class="live-shopping-prices-container">
                     <div class="live-shopping-price">
-                        <strong>${ liveShoppingData.item.prices.specialOffer.price.formatted } *</strong>
+                        <strong>${ prices.price.price.formatted } *</strong>
                     </div>
-                    <del v-if="displaySettings.showCrossPrice">${ liveShoppingData.item.prices.default.price.formatted }</del>
+                    <del v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">${ prices.rrp.price.formatted }</del>
                 </div>
             </div>
 
