--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -154,10 +154,6 @@
     </div>
 </div>
 
-<div id="vue-error" style="display:none">
-    {% include "Ceres::PageDesign.Partials.VueError" %}
-</div>
-
 <script>
     App = {
         config: {{ ceresConfig | json_encode | raw }},
@@ -196,26 +192,28 @@
 {{ get_filtered_tags() }}
 
 <script>
-    var rootElement = document.getElementById("vue-app");
-    var errorElement = document.getElementById("vue-error");
+    {% if ceresConfig.log.checkSyntax %}
+        var rootElement = document.getElementById("vue-app");
+        rootElement.innerHTML = rootElement.innerHTML.replace(/(\s*(?::)\S+=(?:""|''))/g, '');
+
+        var vueApp = new Vue({
+            store: window.ceresStore
+        });
+
+        vueApp.$mount( rootElement.cloneNode(true) );
+
+        if ( vueApp.$el.id === "vue-app")
+        {
+            document.body.replaceChild( vueApp.$el, rootElement );
+        }
+    {% else %}
+        var vueApp = new Vue({
+            el: "#vue-app",
+            store: window.ceresStore
+        });
+    {% endif %}
 
     var vueEventHub = new Vue();
-
-    var vueApp = new Vue({
-        store: window.ceresStore
-    });
-    vueApp.$mount( rootElement.cloneNode(true) );
-
-    if ( vueApp.$el.id !== "vue-app")
-    {
-        rootElement.parentNode.removeChild(rootElement);
-        errorElement.style.display = "block";
-    }
-    else
-    {
-        document.body.replaceChild( vueApp.$el, rootElement );
-        errorElement.parentNode.removeChild(errorElement);
-    }
 
     (function($) {
         
