CHANGE _live-shopping.scss, _variables.scss - replace paddings with sass-variables

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -820,3 +820,8 @@ $pre-scrollable-max-height:   340px !default;
 // Category
 
 $category-text-color:         #fff !default;
+
+// Liveshopping
+
+$live-shopping-padding-x: .8rem;
+$live-shopping-padding-y: 1rem;
