--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -1,5 +1,3 @@
-$live-shopping-padding: 1rem .8rem;
-
 .live-shopping-details
 {
     position: relative;
@@ -8,7 +6,7 @@ $live-shopping-padding: 1rem .8rem;
 
     .live-shopping-item-name
     {
-        padding: .8rem;
+        padding: $live-shopping-padding-x;
         margin: 0;
 
         > a
@@ -24,7 +22,7 @@ $live-shopping-padding: 1rem .8rem;
 
     .live-shopping-countdown
     {
-        padding: $live-shopping-padding;
+        padding: $live-shopping-padding-y $live-shopping-padding-x;
         padding-top: .6rem;
         border-top-left-radius: .25rem;
         border-top-right-radius: .25rem;
@@ -130,8 +128,8 @@ $live-shopping-padding: 1rem .8rem;
 
 .live-shopping-add-to-basket
 {
-    padding-left: .8rem;
-    padding-right: .8rem;
+    padding-left: $live-shopping-padding-x;
+    padding-right: $live-shopping-padding-x;
 }
 
 @for $i from 10 to -1 {
