--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -33,6 +33,10 @@
 
 .widget-image-carousel
 {
+    &.widget-proportional {
+        min-height: 175px;
+    }
+
     .widget-inner
     {
         padding-left: 0;
@@ -45,7 +49,7 @@
             bottom: 60px;
             left: 50%;
             transform: translateX(-50%);
-            width: 80%;
+            width: 70%;
 
             h2, .h2
             {
