FIX global component templates

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -9,6 +9,12 @@
 {{ component( "Ceres::PageDesign.Components.Popper" ) }}
 {{ component( "Ceres::Category.Components.CategoryBreadcrumbs" ) }}
 {{ component( "Ceres::Customer.Components.ForgotPassword" ) }}
+
+{# TODO: remove if shop builder pages can be rebuild by migrations #}
+{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
+{{ component( "Ceres::Containers.Components.ContainerItemList" ) }}
+{{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+
 {% if request.get('isContentBuilder') == 1 %}
     {% include "Ceres::Widgets.WidgetComponents" %}
 {% endif %}
