CHANGE LiveShopping - show prices, even if the offer is not started / has ended

--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -75,5 +75,30 @@
                 <a {% if shippingCat is not empty %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.itemShippingCosts") }}">{{ trans("Ceres::Template.itemShippingCosts") }}</a>
             </div>
         </div>
+
+        <div class="thumb-content" v-else>
+            <div>
+                <div class="prices">
+                    <del class="crossprice" v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
+                        ${ prices.rrp.price.formatted }
+                    </del>
+                    <div class="price">
+                        ${ prices.price.price.formatted } *
+                    </div>
+                </div>
+
+                <div class="category-unit-price" v-if="!(liveShoppingData.item.unit.unitOfMeasurement === 'C62' && liveShoppingData.item.unit.content === 1)">
+                    <span>${ liveShoppingData.item.unit.content }</span>
+                    <span>${ liveShoppingData.item.unit.names.name }</span>
+                    <span v-if="liveShoppingData.item.variation.mayShowUnitPrice">| ${ prices.price.basePrice }</span>
+                </div>
+
+                <span class="vat small text-muted">
+                    * {% if services.customer.showNetPrices() %}{{ trans("Ceres::Template.itemExclVAT") }}{% else %}{{ trans("Ceres::Template.itemInclVAT") }}{% endif %} {{ trans("Ceres::Template.itemExclusive") }}
+                    <a {% if shippingCat is not empty %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.itemShippingCosts") }}">{{ trans("Ceres::Template.itemShippingCosts") }}</a>
+                </span>
+            </div>
+        </div>
+
     </div>
 </script>
