--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -66,7 +66,11 @@
                     <div class="live-shopping-price">
                         <strong>${ prices.price.price.formatted } *</strong>
                     </div>
-                    <del v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">${ prices.rrp.price.formatted }</del>
+                    <span v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
+                        <span v-if="prices.isRrpDefaultPrice">{{ trans("Ceres::Template.liveShoppingBefore") }}</span>
+                        <span v-else>{{ trans("Ceres::Template.liveShoppingRrp") }}</span>
+                        <del>${ prices.rrp.price.formatted }</del>
+                    </span>
                 </div>
             </div>
 
