UPDATE item list module - remove rest call to retriev item data and instead reload the page with updated url

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -102,9 +102,10 @@
                     </ul>
                 </div>
 
-                <div id="vue-rendered-item-list" style="display:none">
+                {# TODO remove #}
+                {# <div id="vue-rendered-item-list" style="display:none">
                     <item-list template="#vue-item-list" :total-items-data="{{ itemCountTotal }}" :category-id="{{ category.id }}"></item-list>
-                </div>
+                </div> #}
 
             </div>
         </div>
