--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -51,6 +51,7 @@
             <div class="col-xs-12">
 
                 <div id="vue-rendered-item-list" class="item-list-frame">
+                    {# TODO ersetzten mit twig #}
                     <item-list
                         :item-data="{{ itemList | json_encode }}"
                         :total-items-data="{{ itemCountTotal }}"
