--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -88,9 +88,12 @@
         <div class="thumb-content" v-else>
             <div>
                 <div class="prices">
-                    <del class="crossprice" v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
-                        ${ prices.rrp.price.formatted }
-                    </del>
+                    <div class="price-view-port">
+                        <del class="crossprice" v-if="displaySettings.showCrossPrice && prices.rrp.price.value > 0">
+                            ${ prices.rrp.price.formatted }
+                        </del>
+                    </div>
+                    
                     <div class="price">
                         ${ prices.price.price.formatted } *
                     </div>
