REMOVE v-render-category and CategoryService

--- a/resources/views/Category/Components/CategoryBreadcrumbs.twig
+++ b/resources/views/Category/Components/CategoryBreadcrumbs.twig
@@ -9,7 +9,7 @@
             <li class="breadcrumb-item" :class="{'active': index == breadcrumbs.length - 1}" v-for="(breadcrumb, index) in breadcrumbs"><!--
                 --><span v-if="index == breadcrumbs.length - 1 && breadcrumb.details != undefined">${ breadcrumb.details[0].name }</span><!--
                 --><span v-if="index == breadcrumbs.length - 1 && breadcrumb.details == undefined && $store.state.item.variation.documents">${ $store.state.item.variation.documents[0].data | itemName }</span><!--
-                --><a :href="breadcrumb.url" v-if="index != breadcrumbs.length - 1" v-render-category="{ id: breadcrumb.id, type: breadcrumb.type }">${ breadcrumb.details[0].name }</a><!--
+                --><a :href="breadcrumb.url" v-if="index != breadcrumbs.length - 1">${ breadcrumb.details[0].name }</a><!--
             --></li>
         </ul>
     </nav>
