UPDATE build files

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -93,7 +93,7 @@
                         {% include "Ceres::ItemList.Partials.LoadingAnimation" %}
                     {% endif %}
 
-                    <ul class="product-list row grid" v-is-loading-watcher="$store.state.itemList.isLoading">
+                    <ul class="product-list row grid" :class="{ 'loading': $store.state.itemList.isLoading }">
                         {% for item in itemList %}
                             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}4{% else %}3{% endif %}">
                                 {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item, 'shippingCat': shippingCat } %}
