--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -27,10 +27,10 @@
                 <div class="col-xs-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
                     {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                        <div class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
                     {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                        <div class="category-description m-b-1">{{ category.details[0].description2 | raw }}</div>
                     {% endif %}
                 </div>
             </div>
@@ -122,10 +122,10 @@
 
         <div class="col-xs-12">
             {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                <div class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
             {% endif %}
             {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                <div class="category-description m-b-1">{{ category.details[0].description2 | raw }}</div>
             {% endif %}
         </div>
     </div>
