CHANGE Pagination - add totalItems parameter

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -63,7 +63,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
                     </noscript>
@@ -112,7 +112,7 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
                     </noscript>
