--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -42,7 +42,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
                 </div>
             </div>
         {% endif %}
@@ -80,7 +80,7 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    <pagination :total-items="{{ itemCountTotal }}"></pagination>
                 </div>
             </div>
         {% endif %}
