ADD navigationTouchHandler directive - handles hover state of the navigation for touch devices

--- a/resources/views/Category/Macros/CategoryTree.twig
+++ b/resources/views/Category/Macros/CategoryTree.twig
@@ -47,7 +47,7 @@
 
             {% if category.children and translatedChildren > 0 %}
 
-                <li class="ddown">
+                <li class="ddown" v-navigation-touch-handler>
                     <a href="{{ currentScopeUrl }}{{ urls.trailingSlashSuffix }}">{{ category.details[0].name }}</a>
 
                     <span class="hidden-lg-up nav-direction" data-toggle="collapse" href="#navDropdown{{ counter }}" aria-expanded="false">
