--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -39,8 +39,8 @@
 
     .widget-inner
     {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
 
         .widget-caption
         {
@@ -155,9 +155,26 @@
 /* Compatibility for IE */
 /* display img with optimal aspect ratio */
 html.ie {
-    .widget-image-carousel .widget-inner .carousel-item .img-cover {
+
+    .widget-image-carousel.widget-proportional {
         min-height: auto;
-        min-width: auto;
+        padding-bottom: 0 !important;
+
+        .carousel {
+            position: relative;
+            top: auto;
+            right: auto;
+            bottom: auto;
+            left: auto;
+
+            .carousel-item .img-cover {
+                width: 100%;
+                top: auto;
+                left: auto;
+                transform: none;
+                position: relative;
+            }
+        }
     }
 }
 
