--- a/resources/views/Category/Item/CategoryView.twig
+++ b/resources/views/Category/Item/CategoryView.twig
@@ -7,6 +7,7 @@
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterList") }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
     {{ component( "Ceres::ItemList.Components.ItemList") }}
+    {{ component( "Ceres::ItemList.Components.CategoryItem") }}
     {{ component( "Ceres::ItemList.Components.CategoryImageCarousel") }}
     {{ component( "Ceres::ItemList.Components.ItemListSorting") }}
     {{ component( "Ceres::ItemList.Components.ItemsPerPage") }}
@@ -87,7 +88,7 @@
 
             <div class="col-xs-12 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}9{% else %}12{% endif %}">
 
-                <div id="twig-rendered-item-list" class="item-list-frame{% if ceresConfig.item.loadingAnimationType == "blur" %} blur-effect{% endif %}">
+                {# <div id="twig-rendered-item-list" class="item-list-frame{% if ceresConfig.item.loadingAnimationType == "blur" %} blur-effect{% endif %}">
 
                     {% if ceresConfig.item.loadingAnimationType != "blur" %}
                         {% include "Ceres::ItemList.Partials.LoadingAnimation" %}
@@ -96,16 +97,27 @@
                     <ul class="product-list row grid" :class="{ 'loading': $store.state.itemList.isLoading }">
                         {% for item in itemList %}
                             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}4{% else %}3{% endif %}">
-                                {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item, 'shippingCat': shippingCat } %}
+                                {# {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item, 'shippingCat': shippingCat } %} #}
+                                {# <category-item :item-data="{{item.data | json_encode}}" image-url-accessor="urlMiddle"></category-item>
                             </li>
                         {% endfor %}
                     </ul>
-                </div>
+                </div> #}
 
                 {# TODO remove #}
-                {# <div id="vue-rendered-item-list" style="display:none">
-                    <item-list template="#vue-item-list" :total-items-data="{{ itemCountTotal }}" :category-id="{{ category.id }}"></item-list>
-                </div> #}
+                <div id="vue-rendered-item-list" style="display:none">
+                    <item-list template="#vue-item-list" :total-items-data="{{ itemCountTotal }}" :category-id="{{ category.id }}">
+                        {% for item in itemList %}
+                            <div>
+                                <noscript>
+                                    <img src="" alt="">
+                                    <div class="name"></div>
+                                    <div class="price"></div>
+                                </noscript>
+                            </div>
+                        {% endfor %}
+                    </item-list>
+                </div>
 
             </div>
         </div>
